tests/ui/hygiene/for-loop.stderr
error[E0425]: cannot find value `iter` in this scope
  --> $DIR/for-loop.rs:6:9
   |
LL |         iter.next();
   |         ^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
